# CameraXTest

./: .gitignore  build.gradle
app/: build.gradle
app/src/androidTest/java/com/example/cameraxtest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GPUIPCommon.cpp  GPUIPCommon.h  GraphicBufferEx.cpp  GraphicBufferEx.h  NubiaGLCopy.cpp  NubiaGLCopy.h  Utils.cpp  Utils.h  hardware1.cpp
app/src/main/java/com/example/cameraxtest/: AssetsUtils.java  BufferUtil.java  CameraXGLSrefaceView.kt  GLCopyJni.java  MainActivity.kt  ShaderUtils.java
app/src/main/java/com/example/cameraxtest/filters/: BaseFilter.java  CameraFilter.java  MoveDelayFilter.java  OesTextureFilter.java  PictureFilter.java  TextureFilter.java
app/src/main/java/com/example/cameraxtest/utils/: AssetsUtil.java  BufferUtil.java  GLUtil.java
app/src/main/res/drawable/: ic_baseline_flash_auto_24.xml  ic_baseline_flash_off_24.xml  ic_baseline_flash_on_24.xml  ic_baseline_photo_camera_24.xml
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
